--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "node": "^16.14.2",
     "yarn": "^1.10"
   },
-  "packageManager": "yarn@1.22.19"
+  "packageManager": "yarn@1.22.19",
+  "peerDependencies": {
+    "@aceforth/nuxt-optimized-images": "^1.4.0"
+  }
 }
