--- a/.eslintrc
+++ b/.eslintrc
@@ -1,41 +1,8 @@
 {
-  "root": true,
   "env": {
-    "browser": true,
-    "node": true,
-    "es2020": true
+    "node": true
   },
   "extends": [
-    "@nuxtjs",
-    "plugin:nuxt/recommended"
-  ],
-  "parserOptions": {
-    "requireConfigFile": false,
-    "parser": "@babel/eslint-parser",
-    "ecmaVersion": 8,
-    "sourceType": "module"
-  },
-  // add your custom rules here
-  "rules": {
-    "vue/comment-directive": 0,
-    "vue/no-v-html": 0,
-    "vue/component-tags-order": [
-      "error",
-      {
-        "order": [ "style", "template", "script"  ]
-      }
-    ],
-    "quotes": [
-      "error",
-      "single"
-    ],
-    "arrow-parens": [
-      "error",
-      "always"
-    ],
-    "semi": [
-      "error",
-      "never"
-    ]
-  }
+   "galexia"
+  ]
 }
